# TFG_Pulsera_Seguimiento_Pacientes_Avanzada_Edad

./: .gitignore  README.md
PLATFORM/backend/api/: .env  alembic.ini  main.py  pyproject.toml  seed.py
PLATFORM/backend/api/alembic/: env.py
PLATFORM/backend/api/alembic/versions/: 2024-07-11T130509_3f3cf07179db_initial_migration.py
PLATFORM/backend/api/antlr-grammar/: .gitignore  README.md  pom.xml
PLATFORM/backend/api/controllers/: bracelet_ctrl_proxy.py  oauth.py
PLATFORM/backend/api/lib/: auth.py  config.py  exceptions.py  logs.py
PLATFORM/backend/api/models/: logs.py  oauth.py
PLATFORM/backend/api/query_parser/: fieldLexer.py  fieldListener.py  fieldParser.py  fieldVisitor.py  searchLexer.py  searchListener.py  searchParser.py  searchVisitor.py  sortLexer.py  sortListener.py  sortParser.py  sortVisitor.py
PLATFORM/backend/api/routes/: __init__.py  alarm.py  chats.py  common.py  instruments.py  message.py  oauth.py  pathologies.py  patient_models.py  patient_pathologies.py  patients.py  studies.py  users.py
PLATFORM/backend/api/walkers/: fields.py  search.py  sort.py
PLATFORM/backend/bracelet-lib/: pyproject.toml
PLATFORM/backend/bracelet-lib/bracelet_lib/: cache.py  util.py
PLATFORM/backend/bracelet-lib/bracelet_lib/controllers/: alarm.py  base_ctrl.py  chats.py  email.py  instruments.py  message.py  passwords.py  pathologies.py  patient_models.py  patient_pathologies.py  patients.py  storage.py  studies.py  users.py
PLATFORM/backend/bracelet-lib/bracelet_lib/exceptions/: __init__.py  sentry.py
PLATFORM/backend/bracelet-lib/bracelet_lib/models/: __init__.py  alarm.py  base_model.py  chats.py  common.py  instruments.py  messages.py  misc.py  pathologies.py  patient_models.py  patient_pathologies.py  patients.py  query_builder.py  (+4 more)
(+255 files in other folders)
